--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -35,12 +35,12 @@ jobs:
             docker pull ${{ secrets.CR_REGISTRY }}/${{ secrets.CR_NAME }}-migrate:develop
             case "${{ github.event.inputs.action }}" in
             apply_one_version)
-            docker-compose -f ~/space21/staging-migrations/avatar-service-migrate-dev.yml --env-file ~/space21/.env_dev up -d avatar-service-migrate-up-one-dev
+            docker-compose -f ~/space21/staging/migrations/avatar-service.yml --env-file ~/space21/staging/.env up -d avatar-service-migrate-up-one-dev
             ;;
             apply_all_versions)
-            docker-compose -f ~/space21/staging-migrations/avatar-service-migrate-dev.yml --env-file ~/space21/.env_dev up -d avatar-service-migrate-up-all-dev
+            docker-compose -f ~/space21/staging/migrations/avatar-service.yml --env-file ~/space21/staging/.env up -d avatar-service-migrate-up-all-dev
             ;;
             rollback_one_version)
-            docker-compose -f ~/space21/staging-migrations/avatar-service-migrate-dev.yml --env-file ~/space21/.env_dev up -d avatar-service-migrate-down-one-dev
+            docker-compose -f ~/space21/staging/migrations/avatar-service.yml --env-file ~/space21/staging/.env up -d avatar-service-migrate-down-one-dev
             ;;
             esac
