--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -10,8 +10,8 @@ jobs:
     name: Run linters
     runs-on: ubuntu-latest
     env:
-      GO_PATHS_CMD: cmd/service cmd/workers/notification
-      GO_PATHS_INTERNAL: internal/config internal/repository/db internal/repository/Kafka/consumer internal/repository/Kafka/producer internal/service
+      GO_PATHS_CMD: cmd/service
+      GO_PATHS_INTERNAL: internal/config internal/repository/db
 
     steps:
       - name: Checkout code
