--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GO_PATHS_CMD: cmd/service
-      GO_PATHS_INTERNAL: internal/config internal/repository/db
+      GO_PATHS_INTERNAL: internal/config internal/repository/db internal/repository/s3 internal/service
 
     steps:
       - name: Checkout code
