change linter settings

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -47,3 +47,8 @@ linter-settings:
   funlen:
     lines: 120
     statements: 50
+
+exclude-rules:
+  - path: "internal/repository/s3/s3.go"
+    linters:
+      - typecheck
