--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           go-version: 1.22
 
+      - name: Install WebP library (libwebp-dev)
+        run: sudo apt-get update && sudo apt-get install -y libwebp-dev
+
       - name: Install golangci-lint
         run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
