--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GO_PATHS_CMD: cmd/service
-      GO_PATHS_INTERNAL: internal/config internal/repository/db internal/repository/s3 internal/service
+      GO_PATHS_INTERNAL: internal/config internal/repository/db internal/repository/s3
+        internal/service internal/repository/kafka/producer/newavatar
 
     steps:
       - name: Checkout code
