--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       GO_PATHS_CMD: cmd/service
       GO_PATHS_INTERNAL: internal/config internal/repository/db internal/repository/s3
-        internal/service internal/repository/kafka/producer/newavatar
+        internal/service
 
     steps:
       - name: Checkout code
